frontend/k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumos-lab-frontend
  namespace: lumos-lab-dev
  labels:
    app: lumos-lab-frontend
spec:
  selector:
    app: lumos-lab-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
